RESOLVED FIXED61022
REGRESSION (r86724): Repro crash loading any webpage in WebKit2 on SnowLeopard
https://bugs.webkit.org/show_bug.cgi?id=61022
Summary REGRESSION (r86724): Repro crash loading any webpage in WebKit2 on SnowLeopard
Alice Liu
Reported 2011-05-17 21:05:18 PDT
Reproducible crash in webprocess when loading any webpage after http://trac.webkit.org/changeset/86724. I'm using Snowleopard. <rdar://problem/9458300>
Attachments
Patch (1.33 KB, patch)
2011-05-17 21:42 PDT, mitz
alice.barraclough: review+
Alice Liu
Comment 1 2011-05-17 21:07:11 PDT
Thread 0 Crashed: Dispatch queue: com.apple.main-thread 0 ??? 000000000000000000 0 + 0 1 com.apple.WebKit2 0x00000001002e4a0a WebKit::WebProcessMain(WebKit::CommandLine const&) + 594 (WebProcessMainMac.mm:97) 2 com.apple.WebKit2 0x000000010028175d WebKitMain(WebKit::CommandLine const&) + 159 (WebKitMain.cpp:48) 3 com.apple.WebKit2 0x000000010028181c WebKitMain + 155 (WebKitMain.cpp:72) 4 com.apple.WebProcess 0x0000000100000e33 main + 233 5 com.apple.WebProcess 0x0000000100000d14 start + 52
mitz
Comment 2 2011-05-17 21:42:21 PDT
mitz
Comment 3 2011-05-17 21:45:31 PDT
Fixed in r86734.
Note You need to log in before you can comment on or make changes to this bug.