<rdar://problem/9458300> REGRESSION (r86724): Repro crash loading any webpage in WebKit2 on SnowLeopard https://bugs.webkit.org/show_bug.cgi?id=61022

Reviewed by Alice Liu.

* WebProcess/mac/WebProcessMainMac.mm:
(WebKit::WebProcessMain): As long as we are not loading the shim on Snow Leopard, we should not
try to initialize it.



git-svn-id: svn://svn.chromium.org/blink/trunk@86734 bbb929c8-8fbe-4397-9dbb-9b2b20218538